# relbot

./: README.md  git-auto-commit.sh
install/: local_setup.sh  setup.sh
install/cam2image_vm2ros/lib/cam2image_vm2ros/: cam2image
install/cam2image_vm2ros/share/cam2image_vm2ros/: local_setup.sh  package.sh
install/my_image_processor/share/my_image_processor/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/relbot2turtlesim/share/relbot2turtlesim/: local_setup.sh  package.sh
install/relbot_launch/share/relbot_launch/: package.sh
install/relbot_sequence_controller/lib/relbot_sequence_controller/: relbot_sequence_controller
install/relbot_sequence_controller/share/relbot_sequence_controller/: local_setup.sh  package.sh
log/: latest_build  latest_test
src/cam2image_vm2ros/: CMakeLists.txt  README.md
src/cam2image_vm2ros/config/: cam2image.yaml
src/cam2image_vm2ros/src/: cam2image.cpp
src/my_image_processor/: CMakeLists.txt  package.xml
src/my_image_processor/include/: image_processor.hpp
src/my_image_processor/src/: image_processor.cpp  image_processor.txt
src/relbot_launch/: CMakeLists.txt
src/relbot_launch/launch/: relbot_cam2image.launch.py  relbot_sequence_controller.launch.py
src/relbot_sequence_controller/: CMakeLists.txt  README.md
src/relbot_sequence_controller/include/: steering.hpp
src/relbot_sequence_controller/src/: relbot_sequence_controller.cpp
src/relbot_simulator/: README.md
src/relbot_simulator/src/: relbot_simulator.cpp
(+3 files in other folders)
